# ape-zksync

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
ape_zksync/: __init__.py  accounts.py  config.py  ecosystems.py  providers.py
src/ape_zksync/: __init__.py  account.py  compiler.py  config.py  constants.py  ecosystem.py  provider.py  transaction.py  utils.py
src/ape_zksync/data/: ContractDeployer.json  ERC20.json  RichWallets.json  __init__.py
src/ape_zksync_test/: __init__.py  account.py
