[tool.poetry]
name = "ape-zksync"
version = "0.1.0"
description = "Ape plugin for the zkSync Ecosystem"
authors = ["Edward Amor <edward.amor3@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
eth-ape = "^0.5.2"
zkvvm = "^0.1.0"

[tool.poetry.group.lint.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.982"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
